fixed moble alignment

--- a/index.css
+++ b/index.css
@@ -90,8 +90,8 @@ body{
 
 .arch-container {
     position: relative;
-    width: 90%;
-    height: 400px;
+    width: 100%;
+    height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
